--- a/app/src/main/res/layout/activity_webtoon.xml
+++ b/app/src/main/res/layout/activity_webtoon.xml
@@ -29,175 +29,15 @@
         android:layout_marginTop="10dp"
         android:visibility="gone" />
 
-    <LinearLayout
-        android:id="@+id/webtoon_header_layout"
+    <include layout="@layout/webtoon_header" />
+
+    <include
+        layout="@layout/webtoon_footer"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:background="#a0000000"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:visibility="visible">
+        android:layout_alignParentBottom="true" />
 
-        <Button
-            android:id="@+id/webtoon_back"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/ic_navigate_before_white_24dp" />
-
-        <TextView
-            android:id="@+id/webtoon_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="용비불패 13화"
-            android:textColor="#ffffff" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-        <ImageView
-            android:id="@+id/webtoon_star"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="end|center_vertical"
-            android:layout_margin="5dp"
-            android:background="@drawable/ic_star_yellow_24dp" />
-
-        <TextView
-            android:id="@+id/webtoon_star_rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="9.8"
-            android:textColor="#ffffff"
-            android:textSize="15dp" />
-
-        <Button
-            android:id="@+id/webtoon_contents_option"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/ic_open_white_icon" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/webtoon_footer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:background="#a0000000"
-        android:orientation="horizontal"
-        android:visibility="visible">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/webtoon_like_btn"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginRight="10dp" />
-
-            <TextView
-                android:id="@+id/webtoon_like_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="0"
-                android:textColor="#ffffff" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/webtoon_comment_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/webtoon_comments_btn"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginRight="5dp"
-                android:background="@drawable/comment_wh" />
-
-            <TextView
-                android:id="@+id/webtoon_comments_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"
-                android:text="0"
-                android:textColor="#ffffff" />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/webtoon_prev_btn"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="@drawable/ic_keyboard_arrow_left_white_24dp" />
-
-            <TextView
-                android:id="@+id/webtoon_order"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="0"
-                android:textColor="#ffffff" />
-
-            <Button
-                android:id="@+id/webtoon_next_btn"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_weight="1"
-                android:background="@drawable/ic_keyboard_arrow_right_white_24dp" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="350dp"
-        android:layout_alignParentBottom="true"
-        android:gravity="center">
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <ListView
-            android:id="@+id/webtoon_contents_num_listview"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:visibility="gone" />
-    </LinearLayout>
+    <include
+        layout="@layout/webtoon_footer_listview"/>
 
 </RelativeLayout>
