--- a/app/src/main/res/layout/contents_main_contents_info.xml
+++ b/app/src/main/res/layout/contents_main_contents_info.xml
@@ -9,15 +9,13 @@
         android:id="@+id/contents_main_info_img"
         android:layout_width="110dp"
         android:layout_height="80dp"
-        android:layout_margin="5dp"
-        android:src="@drawable/contents_main_dummy" />
+        android:layout_margin="5dp" />
 
     <TextView
         android:id="@+id/contents_main_info_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="작품명이 들어갈 자리입니다."
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@+id/contents_main_info_img" />
 
@@ -35,7 +33,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="홍길동"
         android:textColor="#1d68bf"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@+id/contents_main_info_txt1"
@@ -55,7 +52,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="홍길동"
         android:textColor="#1d68bf"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@+id/contents_main_info_txt2"
