--- a/app/src/main/res/layout/fragment_my_page4_notice_list.xml
+++ b/app/src/main/res/layout/fragment_my_page4_notice_list.xml
@@ -6,8 +6,11 @@
     tools:context=".MyPageDir.Fragment4NoticeList">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="fragment4" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:text="알림 내역이 없습니다."
+        android:layout_marginLeft="10dp"
+        />
 
 </FrameLayout>
