--- a/app/src/main/res/layout/main_footer.xml
+++ b/app/src/main/res/layout/main_footer.xml
@@ -18,20 +18,11 @@
         android:textSize="30dp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/main_footer_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/main_footer_logo"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:text="고객센터 | 사업자 정보" />
-
     <LinearLayout
         android:id="@+id/main_footer_copyright_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/main_footer_text"
+        android:layout_below="@id/main_footer_logo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp">
 
