내 작품 fragment완성, 결제모듈 보류, 고도화 진행중

--- a/app/src/main/res/layout/activity_accusation_acitivity.xml
+++ b/app/src/main/res/layout/activity_accusation_acitivity.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CommentDir.AccusationAcitivity">
+    tools:context=".CommentDir.AccusationActivity">
 
     <LinearLayout
         android:id="@+id/accusation_title_layout"
