--- a/app/src/main/res/layout/contents_main_custom_title_bar.xml
+++ b/app/src/main/res/layout/contents_main_custom_title_bar.xml
@@ -42,13 +42,15 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginRight="5dp"
-            android:background="@drawable/ic_notifications_none_black_24dp" />
+            android:background="@drawable/ic_notifications_none_black_24dp"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/contents_main_open"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:background="@drawable/ic_open_icon" />
+            android:background="@drawable/ic_open_icon"
+            android:visibility="gone" />
     </LinearLayout>
 
 </RelativeLayout>
