--- a/app/src/main/res/layout/msg_dialog_layout.xml
+++ b/app/src/main/res/layout/msg_dialog_layout.xml
@@ -18,6 +18,7 @@
             android:src="@drawable/confirm" />
 
         <TextView
+            android:id="@+id/msg_dialog_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
