--- a/app/src/main/res/layout/two_button_dialog_layout.xml
+++ b/app/src/main/res/layout/two_button_dialog_layout.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
     android:layout_height="170dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#ffffff">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/two_button_contents"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
+        app:layout_constraintBottom_toTopOf="@id/two_button_button_layout"
+        app:layout_constraintTop_toTopOf="parent"
         android:text="회원가입을 축하드립니다.&#160;로그인 후 이용하실 수 있습니다"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="17sp" />
 
     <LinearLayout
+        android:id="@+id/two_button_button_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/sign_up_dialog_to_main"
+            android:id="@+id/two_button_first"
             android:layout_width="wrap_content"
             android:layout_height="41dp"
             android:layout_weight="1"
@@ -31,7 +32,7 @@
             android:text="메인으로" />
 
         <Button
-            android:id="@+id/sign_up_dialog_to_login"
+            android:id="@+id/two_button_second"
             android:layout_width="wrap_content"
             android:layout_height="41dp"
             android:layout_weight="1"
@@ -41,4 +42,4 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
