--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".noticeDir.NoticeActivity">
+    tools:context=".NoticeDir.NoticeActivity">
 
     <LinearLayout
         android:id="@+id/notice_title_layout"
