--- a/app/src/main/res/layout/fragment_my_page4_notice_list.xml
+++ b/app/src/main/res/layout/fragment_my_page4_notice_list.xml
@@ -8,9 +8,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:text="알림 내역이 없습니다."
         android:layout_marginLeft="10dp"
-        />
+        android:text="알림 내역이 없습니다."
+        android:textColor="#000000" />
 
 </FrameLayout>
