--- a/app/src/main/res/layout/myworks_fragment3_myworks_item.xml
+++ b/app/src/main/res/layout/myworks_fragment3_myworks_item.xml
@@ -17,8 +17,8 @@
         android:layout_alignBottom="@id/myworks_thumbnail"
         android:layout_marginRight="3dp"
         android:layout_marginBottom="3dp"
-        android:visibility="gone"
-        android:src="@drawable/movie" />
+        android:src="@drawable/movie"
+        android:visibility="gone" />
 
     <RelativeLayout
         android:id="@+id/my_page_fragment1_layout2"
